public interface Scheduler {
    public void scheduleProcesses();
}
